--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Matrimonio Claudia e Federico Seregno">
     <meta name="keywords" content="matrimonio, Seregno, Claudia, Federico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#00a6ff"/>
+    <meta name="theme-color" content="#A6D5FD"/>
     
 	<script
 		src="https://code.jquery.com/jquery-3.4.1.js"
